# benthicQT

./: .gitignore  BQTDefine.h  CMakeLists.txt  COPYING  Makefile  Resources.qrc  bosgviewer.cpp  main.cpp  make.bat  winrez.rc
LibVT/: CMakeLists.txt  LibVT.cpp  LibVT.h  LibVT_Cache.cpp  LibVT_Config.h  LibVT_ImageDecompression.cpp  LibVT_Internal.h  LibVT_PageLoadingThread.cpp  LibVT_PageTable.cpp  LibVT_Readback.cpp  LibVT_TextureCompression.cpp  LibVT_Utilities.cpp  pass.frag  pass.vert  readback.frag  renderVT.frag  renderVT.vert
old/: Teapot.h  (+24 more)
util/UF-3.2/: CMakeLists.txt  CTestConfig.cmake  Doxyfile  old.txt  ufWin32Header.h
util/UF-3.2/Angle/: CMakeLists.txt  ufAngleConversions.cpp  ufAngleConversions.h
util/UF-3.2/Angle/Test/: AngleMain.cpp  CMakeLists.txt
util/UF-3.2/CSVParser/: CMakeLists.txt  ufCSVParser.cpp  ufCSVParser.h
util/UF-3.2/CSVParser/Test/: CMakeLists.txt  CSVParserMain.cpp
util/UF-3.2/Colour/: CMakeLists.txt  ufColour.cpp  ufColour.h
util/UF-3.2/Colour/Test/: CMakeLists.txt  ColourMain.cpp  MakeColourTable.cpp  TestColour1.cpp  TestColour2.cpp
util/UF-3.2/Conversions/: CMakeLists.txt  RotateVectorCode.htm  ufAngleDateTimeConversions.h  ufCoordinateTransforms.h  ufNumberConversions.h  ufNumberStringConversions.h  ufPackUnpack.h  ufRotateVector.h  ufStringFormat.h  ufStringFunctions.cpp  ufStringFunctions.h
util/UF-3.2/Conversions/Test/: CMakeLists.txt  Conversions.cpp  CoordinateTransforms.cpp  StringFns.cpp  TestConversions1.cpp  TestConversions2.cpp  TestConversions3.cpp
util/UF-3.2/DTM/: CMakeLists.txt  ufDTMImage.cpp  ufDTMImage.h  ufDTMVolume.cpp  ufDTMVolume.h  ufDTMVolumeView.cpp  ufDTMVolumeView.h  ufDataCharacteristics.cpp  ufDataCharacteristics.h  ufImageData.cpp  ufImageData.h  ufLookupTables.cpp  ufLookupTables.h  ufObservers.cpp  ufObservers.h  ufPlaneTo3d.cpp  ufPlaneTo3d.h  ufProbe.cpp  ufProbe.h  ufProbeInput.cpp  ufProbeInput.h  ufProbeSource.cpp  ufProbeSource.h  ufSaveData.cpp  ufSaveData.h  ufVisualiser.cpp  ufVisualiser.h
util/UF-3.2/DTM/Test/: CMakeLists.txt  DTMMain.cpp
util/UF-3.2/DateTime/: CMakeLists.txt  ufDateTime.cpp  ufDateTime.h  ufGPSDateTime.cpp  ufGPSDateTime.h  ufISODateTime.cpp  ufISODateTime.h  ufSystemTime.cpp  ufSystemTime.h  ufTimeConversions.cpp  ufTimeConversions.h
util/UF-3.2/DateTime/Test/: CMakeLists.txt  DateTimeMain.cpp  GPSDateTimeMain.cpp  ISODateTimeMain.cpp
util/UF-3.2/Examples/: CMakeLists.txt  UFExamples.html
util/UF-3.2/Examples/CSVParser/: CMakeLists.txt  TestCSVParser.cpp
util/UF-3.2/Examples/Colour/: CMakeLists.txt  MakeColourTable.h  MyColour.cpp
util/UF-3.2/Examples/ColourPickerComboBox/: CMakeLists.txt  ColourEditCtrl.cpp  ColourEditCtrl.h  ColourPickerCB.cpp  ColourPickerCB.h  ColourPickerComboBox.cpp  ColourPickerComboBox.h  ColourPickerComboBox.rc  ColourPickerComboBoxDlg.cpp  ColourPickerComboBoxDlg.h  PickAColour.cpp  PickAColour.h  resource.h  stdafx.cpp
util/UF-3.2/Examples/Conversions/: CMakeLists.txt  Conversions.cpp  CoordinateTransforms.cpp  StringFns.cpp
util/UF-3.2/Examples/DateTime/: CMakeLists.txt  DateTime.cpp  GPSTime.cpp
util/UF-3.2/Examples/FileUtilities/: CMakeLists.txt  FileUtilities.cpp
util/UF-3.2/Examples/GPSParser/: CMakeLists.txt  TestGPSParser.cpp
util/UF-3.2/Examples/GeographicConversions/: CMakeLists.txt  LatLong2UTM.cpp  TestGeographicConversions.cpp
util/UF-3.2/Examples/Logger/: CMakeLists.txt  TestLogger.cpp
util/UF-3.2/Examples/Statistics/: CMakeLists.txt  TestRNG.cpp  TestStatistics.cpp
util/UF-3.2/FileUtilities/: CMakeLists.txt  ufFileUtilities.cpp  ufFileUtilities.h
util/UF-3.2/FileUtilities/Test/: CMakeLists.txt  FileUtilitiesMain.cpp
util/UF-3.2/FindUF/: FindUF.cmake
util/UF-3.2/GPSParser/: CMakeLists.txt  ufBOD.cpp  ufBOD.h  ufBWC.cpp  ufBWC.h  ufCASDTC.cpp  ufCASDTC.h  ufCASRG.cpp  ufCASRG.h  ufGGA.cpp  ufGGA.h  ufGLL.cpp  ufGLL.h  ufGRME.cpp  ufGRME.h  ufGRMM.cpp  ufGRMM.h  ufGRMSTO.cpp  ufGRMSTO.h  ufGRMZ.cpp  ufGRMZ.h  ufGSA.cpp  ufGSA.h  ufGSV.cpp  ufGSV.h  ufHCHDG.cpp  ufHCHDG.h  ufHDT.cpp  ufHDT.h  ufNMEASentence.cpp  ufNMEASentence.h  ufPASHS.cpp  ufPASHS.h  ufPTPSRATT.cpp  ufPTPSRATT.h  ufRMB.cpp  ufRMB.h  ufRMC.cpp  ufRMC.h  ufRTE.cpp  (+9 more)
util/UF-3.2/GPSParser/Test/: CMakeLists.txt  GPSParserMain.cpp
util/UF-3.2/GeographicConversions/: CMakeLists.txt  ufECEF.cpp  ufECEF.h  ufEllipsoid.cpp  ufEllipsoid.h  ufEllipsoids.cpp  ufEllipsoids.h  ufLocalRedfearn.cpp  ufLocalRedfearn.h  ufMapGrid.cpp  ufMapGrid.h  ufMapGrids.cpp  ufMapGrids.h  ufRedfearn.cpp  ufRedfearn.h  ufVincenty.cpp  ufVincenty.h
util/UF-3.2/GeographicConversions/References/: Accurate Algorithms to TransformBr - Geocentric to Geodetic Coordinates.htm  Transformation of Geocentric to Geodetic Coordinates without Approximations.htm
util/UF-3.2/GeographicConversions/Test/: CMakeLists.txt  GeographicConversionsMain.cpp
util/UF-3.2/LastConfigureStep/: CMakeLists.txt
util/UF-3.2/Logger/: CMakeLists.txt  ufLogger.cpp  ufLogger.h
util/UF-3.2/Logger/Test/: CMakeLists.txt  LoggerMain.cpp
util/UF-3.2/Macros/: CMakeLists.txt  ufSetGetMacros.h
util/UF-3.2/Navigation/: CMakeLists.txt  ufBounds.cpp  ufBounds.h  ufCopyright.cpp  ufCopyright.h  ufEmail.cpp  ufEmail.h  ufGeographicPoint.cpp  ufGeographicPoint.h  ufGpx.cpp  ufGpx.h  ufGreatCircle.cpp  ufGreatCircle.h  ufIEEEConstants.cpp  ufIEEEConstants.h  ufLink.cpp  ufLink.h  ufMetadata.cpp  ufMetadata.h  ufNavigationContainer.cpp  ufNavigationContainer.h  ufPerson.cpp  ufPerson.h  ufPointSegment.cpp  ufPointSegment.h  ufRoute.cpp  ufRoute.h  ufTrack.cpp  ufTrack.h  ufTrackSegment.cpp  ufTrackSegment.h  ufWaypoint.cpp  ufWaypoint.h
util/UF-3.2/Navigation/Test/: CMakeLists.txt  GPXMain.cpp  NavigationMain.cpp
util/UF-3.2/Statistics/: CMakeLists.txt  ufMeanSD.h
util/UF-3.2/Statistics/Test/: CMakeLists.txt  StatisticsMain.cpp
util/UF-3.2/UsefulScripts/: CMakeGenericVariableLogging.cmake  CheckoutUF  ConvertFiles  DeletingBackupFiles  Search for a string in a file  UpdateUF  clean_text_files  renaming
util/UF-3.2/VTK/: CMakeLists.txt  ufOrientationMarker.cpp  ufOrientationMarker.h
(+188 files in other folders)
